fixed bio font-sizes and icon size responsively, as well as button fade times for about section as well as icon spacing within mobile about section buttons

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -265,11 +265,16 @@
         .paraSignBtn(@btn-bg-color,@btnFontSize,@button-font-color);
         cursor: pointer;
         &:hover{
-        background-color:lighten(@button-font-color,10%);
-        transition: 0.7s ease-in-out;
-        color:@primary-color;
-                }
-        } 
+        // background-color:lighten(@button-font-color,10%);
+        // transition: 0.7s ease-in-out;
+        // color:@primary-color;
+        background-color: white;
+        color: @primary-color;
+        border: solid @primary-color 2px;
+        transform: translate(0px, -1px);
+        transition-duration: .2s;
+        }
+    } 
 }
 
 //
@@ -282,28 +287,41 @@
     justify-content: center;
     margin-top:2rem;
     margin-bottom:10rem;
-    button{
-        height:4.3rem;
-        width:19.9rem;  
-        border-radius: 0.9rem;
-        text-decoration: none;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
-        .paraSignBtn(@btn-bg-color,@btnFontSize,@button-font-color);
-    &:hover{
-        background-color:lighten(@button-font-color,10%);
-        transition: 0.7s ease-in-out;
-        color:@primary-color;
-    }
-    .fa-angle-down{
-        font-size: 5rem;
-        margin-bottom:10px;
-    }
+        button{
+            height:4.3rem;
+            width:19.9rem;  
+            border-radius: 0.9rem;
+            text-decoration: none;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
+            .paraSignBtn(@btn-bg-color,@btnFontSize,@button-font-color);
+            &:hover{
+                // background-color:lighten(@button-font-color,10%);
+                // transition: 0.05s ease-in-out;
+                // color:@primary-color;
+
+                background-color: white;
+                color: @primary-color;
+                border: solid @primary-color 2px;
+                transform: translate(0px, -1px);
+                transition-duration: .2s;
+                
+
+
+                // .hero-text button:hover {
+                //     background-color: #48a5ff;
+                //     color: white;
+                //     box-shadow: 0 1px 7px 0 rgba(140, 198, 255, 1);
+                //     transform: translate(0px, -1px);
+                //     transition-duration: 0.1.5s;
+                //   }
+            }
+            .fa-angle-down{
+                font-size: 4rem;
+            }
         } 
     }
-
 }
 
- 
 
 
 
